testdata/baselines/reference/submodule/conformance/privateNameStaticMethodAssignment.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameStaticMethodAssignment.ts(4,12): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(5,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(6,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(7,18): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameStaticMethodAssignment.ts(9,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameStaticMethodAssignment.ts (5 errors) ====
    class A3 {
        static #method() { };
        constructor(a: typeof A3, b: any) {
            A3.#method = () => {} // Error, not writable 
               ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            a.#method = () => { }; // Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            b.#method =  () => { } //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            ({ x: A3.#method } = { x: () => {}}); //Error, not writable 
                     ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            let x = A3.#method;
            b.#method++ //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
        }
    }
    